<resources>
    <string name="app_name">PlacesApp</string>
    <string name="header_events">Novos\n\tEventos</string>
    <string name="str_retry">Tentar Novamente</string>
    <string name="error_network"> Conexão Indisponível! Tente novamente mais tarde.</string>
    <string name="error_server"> Estamos com problemas em nossos Servidores! Tente novamente mais tarde.</string>
    <string name="error_generic"> Ocorreu um erro inesperado! Tente novamente mais tarde.</string>
    <string name="error_timeout">Tempo de conexão exedido! Tente novamente mais tarde</string>
    <string name="verNoMapa">Ver no mapa</string>
    <string name="success_checkin">CheckIn efetuado com sucesso !</string>
    <string name="error_checkin">Não foi possível realizar o check-in! o seguinte erro ocorreu:</string>
    <string name="checkin_error_name_empty">O nome deve ser informado!</string>
    <string name="checkin_error_email_empty">O email deve ser informado!</string>
    <string name="checkin_error_email_invalid">Email inválido!!</string>
    <string name="str_nome">Nome:</string>
    <string name="str_email">Email:</string>
    <string name="str_fazer_checkin">Fazer Check-In</string>
    <string name="checkIn">Check-In</string>
    <string name="descriptionIconClock">Icon Clock</string>
    <string name="descriptionIconMoney">Icon Money</string>
    <string name="descriptionImageEvent">Event</string>
    <string name="descriptionFabCheckIn">Fazer Check - In</string>
    <string name="descriptionIconClose">Close</string>
    <string name="descriptionIconError">Error Alert</string>
    <string name="str_ok">Ok</string>
    <string name="descriptionIconNetwork">Network</string>
    <string name="imageTransicion">imageTransicion</string>
</resources>