<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#fff"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/imgError"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_network"
        android:contentDescription="@string/descriptionIconNetwork"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtErrorMessage"
        android:text="@string/error_network"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRetry"
        android:text="@string/str_retry"/>

</LinearLayout>