<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/background_card">

        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/descriptionImageEvent"
            android:transitionName="@string/imageTransicion"
            />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgEvent"
            style="@style/eventTitle"
            />
        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            style="@style/eventDescription"
            android:lines="3"
            android:gravity="center_vertical"
            android:ellipsize="end"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@id/txtDescription"
            android:layout_margin="5dp"/>
        <ImageView
            android:id="@+id/iconClock"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_access_time"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/descriptionIconClock"
            />
        <TextView
            android:id="@+id/txtDataHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintLeft_toRightOf="@id/iconClock"
            app:layout_constraintBottom_toBottomOf="parent"

            style="@style/textDateTimeAndHeader"/>

        <View
            android:id="@+id/vSeparator"
            android:layout_width="1.6dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintLeft_toRightOf="@id/txtDataHora"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorDivider"
            android:layout_margin="5dp"/>
        <ImageView
            android:id="@+id/iconMoney"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_attach_money"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toRightOf="@id/vSeparator"
            android:contentDescription="@string/descriptionIconMoney"
            />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintLeft_toRightOf="@id/iconMoney"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            style="@style/textDateTimeAndHeader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>