<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/mainLayout">

                <TextView
                    android:id="@+id/txtPlaceName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    style="@style/eventHeader" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorDivider" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="2dp">

                    <ImageView
                        android:id="@+id/iconClock"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_access_time"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="5dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:contentDescription="@string/descriptionIconClock"
                        />
                    <TextView
                        android:id="@+id/txtDataHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/iconClock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/textDateTimeAndHeader"/>

                    <View
                        android:id="@+id/vSeparator"
                        android:layout_width="1.6dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/txtDataHora"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/colorDivider"
                        android:layout_margin="5dp"/>
                    <ImageView
                        android:id="@+id/iconMoney"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_attach_money"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintLeft_toRightOf="@id/vSeparator"
                        android:contentDescription="@string/descriptionIconMoney"
                        />

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/iconMoney"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textStyle="bold"
                        style="@style/textDateTimeAndHeader"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/colorDivider"
                    android:layout_margin="2dp"/>
                <Button
                    android:id="@+id/btnOpenMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verNoMapa"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/colorDivider"
                    android:layout_margin="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtDescription"
                    style="@style/ItemTextContent"
                    android:textColor="@color/colorContent"
                    android:padding="15dp"
                    />
            </LinearLayout>

            <include layout="@layout/inflater_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/layoutError"/>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appbarL"
        android:background="@color/colorWhite"
        style="@style/texto18.white"
        android:theme="@style/Theme.PlacesApp"
        android:fitsSystemWindows="true"
        

        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            android:id="@+id/collapse"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/texto18.white"
            

            >
            <ImageView
                android:id="@+id/imgCollapse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:layout_collapseParallaxMultiplier="0.7"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/descriptionImageEvent"
                />

 

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/colorPrimary"
                app:titleTextAppearance="@style/texto18"

                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_event_available"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:id="@+id/fabCheckIn"
        android:contentDescription="@string/descriptionFabCheckIn"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:visibility="gone"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>